--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -91,8 +91,7 @@ jobs:
         uses: docker/metadata-action@v4
         with:
           images: |
-            estrellaxd/auto_bangumi
-            ghcr.io/${{ github.repository }}
+            umbor666/auto_bangumi
           tags: |
             type=semver,pattern={{version}}
             type=raw,value=latest
@@ -103,8 +102,7 @@ jobs:
         uses: docker/metadata-action@v4
         with:
           images: |
-            estrellaxd/auto_bangumi:dev
-            ghcr.io/${{ github.repository }}
+            umbor666/auto_bangumi:dev
           tags: |
             type=raw,value=${{ github.ref_name }}
             type=raw,value=dev-latest
@@ -115,14 +113,6 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
-
-      - name: Login to ghcr.io
-        if: ${{ github.event_name == 'push' }}
-        uses: docker/login-action@v2
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.ACCESS_TOKEN }}
 
       - name: Download artifact
         uses: actions/download-artifact@v3
